remove base path
