# handler/http_hdl/swagger_docs/restricted_docs.go
@@ -369,24 +369,16 @@ const docTemplaterestricted = `{
         "time.Duration": {
             "type": "integer",
             "enum": [
-                -9223372036854775808,
-                9223372036854775807,
                 1,
                 1000,
                 1000000,
-                1000000000,
-                60000000000,
-                3600000000000
+                1000000000
             ],
             "x-enum-varnames": [
-                "minDuration",
-                "maxDuration",
                 "Nanosecond",
                 "Microsecond",
                 "Millisecond",
-                "Second",
-                "Minute",
-                "Hour"
+                "Second"
             ]
         }
     }
@@ -396,7 +388,7 @@ const docTemplaterestricted = `{
 var SwaggerInforestricted = &swag.Spec{
 	Version:          "1.3.0",
 	Host:             "",
-	BasePath:         "/restricted",
+	BasePath:         "/",
 	Schemes:          []string{},
 	Title:            "Host Manager restricted API",
 	Description:      "Provides access to selected host functions.",
