# handler/http_hdl/swagger_docs/restricted_swagger.json
@@ -10,7 +10,7 @@
         },
         "version": "1.3.0"
     },
-    "basePath": "/restricted",
+    "basePath": "/",
     "paths": {
         "/host-info": {
             "get": {
@@ -362,24 +362,16 @@
         "time.Duration": {
             "type": "integer",
             "enum": [
-                -9223372036854775808,
-                9223372036854775807,
                 1,
                 1000,
                 1000000,
-                1000000000,
-                60000000000,
-                3600000000000
+                1000000000
             ],
             "x-enum-varnames": [
-                "minDuration",
-                "maxDuration",
                 "Nanosecond",
                 "Microsecond",
                 "Millisecond",
-                "Second",
-                "Minute",
-                "Hour"
+                "Second"
             ]
         }
     }
